# MyTrader

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ReadMe  main.cpp
layer_app/: CMakeLists.txt  需求
layer_app/AnalystGui/: CMakeLists.txt
layer_app/AnalystGui/ItemHandler/: AtrGraph.cpp  AtrGraph.h  AvgValueGraph.cpp  AvgValueGraph.h  Break4WeekGraph.cpp  Break4WeekGraph.h  CloseTag.cpp  CloseTag.h  CloseTag_Main.cpp  CloseTag_Main.h  CloseTag_Sub.cpp  CloseTag_Sub.h  EmaGraph.cpp  EmaGraph.h  ItemsHandler.cpp  ItemsHandler.h  KLinePlot.cpp  KLinePlot.h  LineDrawer.cpp  LineDrawer.h  MaGraph.cpp  MaGraph.h  MacdDivergenceItem.cpp  MacdDivergenceItem.h  MacdGraph.cpp  MacdGraph.h  MouseMoveItems.cpp  MouseMoveItems.h  SubGraph.cpp  SubGraph.h  TMatchesItems.cpp  TMatchesItems.h  TradeSideRect.cpp  TradeSideRect.h  VwMaGraph.cpp  VwMaGraph.h
layer_app/AnalystGui/klineShape/: KLineShape.cpp  KLineShape.h  KLineShape_BreakUTurn.cpp  KLineShape_BreakUTurn.h  KLineShape_Div.cpp  KLineShape_Div.h  KShapeDefine.cpp  KShapeDefine.h  MakeScanPacket.cpp  MakeScanPacket.h  MakeScanPacket_BreakUTurn.cpp  MakeScanPacket_BreakUTurn.h  MakeScanPacket_Div.cpp  MakeScanPacket_Div.h  ScanKShape.cpp  ScanKShape.h  ScanKShape_BreakMix.cpp  ScanKShape_BreakMix.h  ScanKShape_Future.cpp  ScanKShape_Future.h  ScanKShape_Stock.cpp  ScanKShape_Stock.h
layer_app/AnalystGui/packaging/: run_AnalystGui.bat
layer_app/AnalystGui/qcustomplot/: qcustomplot.cpp  qcustomplot.h
layer_app/AnalystGui/resources/: AnalystGui.qrc
layer_app/AnalystGui/src/: AnalystGui.cpp  AnalystGui.h  AxisTickerText_KLine.cpp  AxisTickerText_KLine.h  BracketWithArrow.cpp  BracketWithArrow.h  ColorManager.cpp  ColorManager.h  Factory_AnalystGui.cpp  Factory_AnalystGui.h  HtmlItemText.cpp  HtmlItemText.h  KLineUpdator.cpp  KLineUpdator.h  PlotContainer.cpp  PlotContainer.h  PlotObject.cpp  PlotObject.h  axistag.cpp  axistag.h  main.cpp
layer_app/AnalystGui/tSideTimeHandler/: TSideTimeHandler.cpp  TSideTimeHandler.h  TSideTimeHandler_Future.cpp  TSideTimeHandler_Future.h  TSideTimeHandler_Stock.cpp  TSideTimeHandler_Stock.h
layer_app/AnalystGui/tableModel/: TableModel.cpp  TableModel.h  TableModel_Ma.cpp  TableModel_Ma.h  TableModel_Ma_Mouse.cpp  TableModel_Ma_Mouse.h  TableModel_Macd.cpp  TableModel_Macd.h
layer_app/AnalystGui/ui/: AnalystGui.ui
layer_app/JsonCsvTransfer/: CMakeLists.txt
layer_app/JsonCsvTransfer/include/: CsvContract.h  CsvStrategy.h  CsvTradePoints.h  CsvTransor.h
layer_app/JsonCsvTransfer/packaging/: run_JsonCsvTransfer.bat
layer_app/JsonCsvTransfer/src/: CsvContract.cpp  CsvContract_Real.cpp  CsvContract_Real.h  CsvStrategy.cpp  CsvStrategy_Real.cpp  CsvStrategy_Real.h  CsvTradePoints.cpp  CsvTradePoints_Real.cpp  CsvTradePoints_Real.h  CsvTransor.cpp  JsonCsvTransfer.cpp
layer_app/QAnalyst/: CMakeLists.txt
layer_app/QAnalyst/include/: SaveData_Klines.h  Tick_BigGap.h  TradeDay.h
layer_app/QAnalyst/packaging/: run_QAnalyst.bat
layer_app/QAnalyst/resources/: QAnalyst.qrc
layer_app/QAnalyst/src/: ModifyKline.cpp  ModifyKline.h  QAnalyst.cpp  QAnalyst.h  SaveData_Klines.cpp  SaveData_Klines.h  StatisTick.cpp  StatisTick.h  TableModel.cpp  TableModel.h  TableModel_Kline.cpp  TableModel_Kline.h  TableModel_Tick.cpp  TableModel_Tick_Future.cpp  TableModel_Tick_Stock.cpp  Tick_BigGap.cpp  TradeDay.cpp  main.cpp  stdafx.h
layer_app/QAnalyst/ui/: QAnalyst.ui
layer_app/QIBDatabase/: CLAUDE.md  CMakeLists.txt  Readme.md
layer_app/QIBDatabase/cmd/: Cmd_RecountAllIndex.cpp  Cmd_RecountAllIndex.h  Cmd_UpdateAllIndexFromTimePos.cpp  Cmd_UpdateAllIndexFromTimePos.h
layer_app/QIBDatabase/packaging/: run_QIBDatabase.bat
layer_app/QIBDatabase/src/: Calculator.cpp  Calculator.h  Calculator_DivType.cpp  Calculator_DivType.h  Calculator_Ema.cpp  Calculator_Ma.cpp  Calculator_Ma.h  Calculator_Macd.cpp  Calculator_VwMa.cpp  Calculator_VwMa.h  Compare.cpp  Compare.h  DbTable_Average.cpp  DbTable_Average.h  DbTable_DivType.cpp  DbTable_DivType.h  DbTable_KLine.cpp  DbTable_KLine.h  DbTable_Macd.cpp  DbTable_Macd.h  DbTable_TickHis.cpp  Env_IB.cpp  Env_IB.h  Factory.cpp  Factory.h  GetRecordNoForDb.cpp  GetRecordNoForDb.h  GlobalDefine.h  MakeKlinePairs.cpp  MakeKlinePairs.h  QDatabaseImp.cpp  QDatabaseImp.h  QIBDatabase.cpp  (+13 more)
layer_app/QIBTrader_Pro/: CLAUDE.md  ReadMe.md  requirements.txt
layer_app/QTransKLineFormIB/: CMakeLists.txt
layer_app/QuoteGenerator/: CMakeLists.txt
layer_app/Requirement_Description/: backtest.py  uturn_bolling.py  uturn_bottom.py  uturn_top.py  交易策略需求
layer_app/StLoader/: CMakeLists.txt
layer_app/StrategyEngine/: CLAUDE.md  README.md  requirements.txt
layer_factory_app/Factory_Setup/: CMakeLists.txt
layer_factory_app/Factory_StOperator/: CMakeLists.txt
layer_factory_app/Factory_Strategys/: CMakeLists.txt
layer_factory_base0/: CMakeLists.txt
layer_factory_base0/Factory_Calculator/: CMakeLists.txt
layer_factory_base0/Factory_HashEnv/: CMakeLists.txt
layer_factory_base0/Factory_IBGlobalShare/: CMakeLists.txt
layer_factory_base0/Factory_IBJSon/: CMakeLists.txt
layer_factory_base0/Factory_Log/: CMakeLists.txt
layer_factory_base0/Factory_Monitor/: CMakeLists.txt
layer_factory_base0/Factory_QDatabase/: CMakeLists.txt
layer_factory_base0/Factory_QShareEnv/: CMakeLists.txt
layer_factory_base0/Factory_TShareEnv/: CMakeLists.txt
layer_factory_base0/Factory_Topics/: CMakeLists.txt
layer_factory_base0/QtGlobalLib/: CMakeLists.txt
layer_factory_base1/: CMakeLists.txt
layer_factory_base1/Factory_AnalystDeal/: CMakeLists.txt
layer_factory_base1/Factory_Callback/: CMakeLists.txt
layer_factory_base1/Factory_Simulator/: CMakeLists.txt
layer_factory_base1/Factory_UnifyInterface/: CMakeLists.txt
layer_lib/: CMakeLists.txt
layer_lib/BdbLib/: CMakeLists.txt
layer_lib/IBSourceLib/: CMakeLists.txt
layer_lib/IBSysDefine/: CMakeLists.txt
layer_lib/IceCompiler/: .gitignore  CMakeLists.txt  QDatabase.ice  QStruc.ice  myslice2cpp.bat  myslice2py.sh
layer_lib/RocksDbLib/: CLAUDE.md  CMakeLists.txt
layer_lib/ToolLib/: CMakeLists.txt
(+1350 files in other folders)
